# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_proto//proto:defs.bzl", "proto_descriptor_set")
load("//test:cel_go_test.bzl", "cel_go_test")

package(
    default_visibility = [
        "//conformance:__subpackages__",
        "//policy:__subpackages__",
        "//tools:__subpackages__",
    ],
    licenses = ["notice"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "compiler.go",
        "conformance.go",
        "composer.go",
        "config.go",
        "parser.go",
        "source.go",
        "test_tag_handler_k8s.go",
        "yaml.go",
    ],
    importpath = "github.com/google/cel-go/policy",
    deps = [
        "//cel:go_default_library",
        "//common:go_default_library",
        "//common/ast:go_default_library",
        "//common/containers:go_default_library",
        "//common/decls:go_default_library",
        "//common/env:go_default_library",
        "//common/operators:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//ext:go_default_library",
        "@in_yaml_go_yaml_v3//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "compiler_test.go",
        "composer_test.go",
        "config_test.go",
        "helper_test.go",
        "parser_test.go",
        "yaml_test.go",
    ],
    data = [":testdata"],
    embed = [":go_default_library"],
    deps = [
        "//cel:go_default_library",
        "//test:go_default_library",
        "//common/debug:go_default_library",
        "//common/types:go_default_library",
        "//interpreter:go_default_library",
        "//common/types/ref:go_default_library",
        "//test/proto3pb:go_default_library",
        "@dev_cel_expr//conformance/proto3:go_default_library",
        "@in_yaml_go_yaml_v3//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@io_bazel_rules_go//go/runfiles",
        "@org_golang_google_genproto_googleapis_api//expr/v1alpha1:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
    ],
)

filegroup(
    name = "testdata",
    testonly = True,
    srcs = glob(["testdata/**"]) + [
        "@cel_policy//conformance:testdata",
    ],
)

proto_descriptor_set(
    name = "test_all_types_fds",
    deps = [
        "@dev_cel_expr//proto/cel/expr/conformance/proto3:test_all_types_proto",
    ],
)

cel_go_test(
    name = "nested_rules_variable_shadowing_policy",
    cel_expr = "testdata/nested_rules_variable_shadowing/policy.yaml",
    config = "testdata/nested_rules_variable_shadowing/config.yaml",
    enable_coverage = True,
    test_src = "//policy/test:cel_test_runner.go",
    test_suite = "testdata/nested_rules_variable_shadowing/tests.yaml",
)

cel_go_test(
    name = "nested_rules_unconditional_chaining_policy",
    cel_expr = "testdata/nested_rules_unconditional_chaining/policy.yaml",
    config = "testdata/nested_rules_unconditional_chaining/config.yaml",
    enable_coverage = True,
    test_src = "//policy/test:cel_test_runner.go",
    test_suite = "testdata/nested_rules_unconditional_chaining/tests.yaml",
)

cel_go_test(
    name = "nested_rules_unconditional_chaining_optional_policy",
    cel_expr = "testdata/nested_rules_unconditional_chaining_optional/policy.yaml",
    config = "testdata/nested_rules_unconditional_chaining_optional/config.yaml",
    enable_coverage = True,
    test_src = "//policy/test:cel_test_runner.go",
    test_suite = "testdata/nested_rules_unconditional_chaining_optional/tests.yaml",
)

cel_go_test(
    name = "nested_rules_unwrap_rewrap_policy",
    cel_expr = "testdata/nested_rules_unwrap_rewrap/policy.yaml",
    config = "testdata/nested_rules_unwrap_rewrap/config.yaml",
    enable_coverage = True,
    test_src = "//policy/test:cel_test_runner.go",
    test_suite = "testdata/nested_rules_unwrap_rewrap/tests.yaml",
)

cel_go_test(
    name = "variable_type_propagation_policy",
    cel_expr = "testdata/variable_type_propagation/policy.yaml",
    config = "testdata/variable_type_propagation/config.yaml",
    enable_coverage = True,
    test_src = "//policy/test:cel_test_runner.go",
    test_suite = "testdata/variable_type_propagation/tests.yaml",
)
