# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test", "go_binary")

package(
    licenses = ["notice"],  # Apache 2.0
)

go_binary(
    name = "repl_cli",
    srcs = ["repl.go"],
    deps = [
        "@com_github_chzyer_readline//:readline",
    ],
    importpath = "github.com/google/cel-go/repl",
    embed = [":go_default_library"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "evaluator.go",
        "commands.go"
    ],
    importpath = "github.com/google/cel-go/repl",
    deps = [
        "//cel:go_default_library",
        "//checker/decls:go_default_library",
        "//common/types/ref:go_default_library",
        "//interpreter:go_default_library",
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "evaluator_test.go",
        "commands_test.go"
    ],
    embed = [":go_default_library"],
)

