# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//repl:__subpackages__"],
    licenses = ["notice"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "commands.go",
        "evaluator.go",
        "typefmt.go",
    ],
    importpath = "github.com/google/cel-go/repl",
    deps = [
        "//cel:go_default_library",
        "//checker/decls:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//interpreter:go_default_library",
        "//interpreter/functions:go_default_library",
        "//repl/parser:go_default_library",
        "@com_github_antlr_antlr4_runtime_go_antlr//:go_default_library",
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "commands_test.go",
        "evaluator_test.go",
        "typefmt_test.go",
    ],
    embed = [":go_default_library"],
)
