# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//repl:__subpackages__"],
    licenses = ["notice"],
)

go_library(
    name = "go_default_library",
    srcs = [
        "commands.go",
        "evaluator.go",
        "typefmt.go",
    ],
    importpath = "github.com/google/cel-go/repl",
    deps = [
        "//cel:go_default_library",
        "//checker/decls:go_default_library",
        "//common/functions:go_default_library",        
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//ext:go_default_library",
        "//repl/parser:go_default_library",
        "@com_github_antlr4_go_antlr_v4//:go_default_library",
        "@dev_cel_expr//conformance/proto2:go_default_library",
        "@dev_cel_expr//conformance/proto3:go_default_library",
        "@org_golang_google_genproto_googleapis_api//expr/v1alpha1:go_default_library",
        "@org_golang_google_genproto_googleapis_rpc//context/attribute_context:go_default_library",
        "@org_golang_google_protobuf//encoding/prototext:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",        
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//reflect/protodesc:go_default_library",
        "@org_golang_google_protobuf//types/descriptorpb:go_default_library",
    ], 
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "commands_test.go",
        "evaluator_test.go",
        "typefmt_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//cel:go_default_library",
        "//test/proto2pb:go_default_library",
        "@org_golang_google_genproto_googleapis_api//expr/v1alpha1:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
