load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@org_pubref_rules_protobuf//go:rules.bzl", "GRPC_COMPILE_DEPS")

go_library(
    name = "go_default_library",
    srcs = [
        "server.go",
    ],
    importpath = "github.com/google/cel-go/server",
    deps = [
        "//checker:go_default_library",
        "//common:go_default_library",
        "//common/packages:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//common/types/traits:go_default_library",
        "//interpreter:go_default_library",
        "//parser:go_default_library",
        "@com_google_cel_spec//proto/v1:cel_service_go_proto",
        "@com_google_cel_spec//proto/v1:eval_go_proto",
        "@com_google_cel_spec//proto/v1:value_go_proto",
        "@com_google_googleapis//:rpc_status_go_proto",
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ] + GRPC_COMPILE_DEPS,
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    args = ["$(location :cel_server)"],
    data = [":cel_server"],
    rundir = ".",
    deps = [
        ":go_default_library",
        "//checker/decls:go_default_library",
        "//common/operators:go_default_library",
        "//test:go_default_library",
        "@com_google_cel_spec//proto/checked/v1:checked_go_proto",
        "@com_google_cel_spec//proto/v1:cel_service_go_proto",
        "@com_google_cel_spec//proto/v1:eval_go_proto",
        "@com_google_cel_spec//proto/v1:syntax_go_proto",
        "@com_google_cel_spec//proto/v1:value_go_proto",
        "@com_google_googleapis//:rpc_status_go_proto",
    ] + GRPC_COMPILE_DEPS,
    visibility = ["//visibility:public"],
)

go_binary(
    name = "cel_server",
    srcs = ["main.go"],
    deps = [
        "//server:go_default_library",
        "@com_google_cel_spec//proto/v1:cel_service_go_proto",
        "@org_golang_google_grpc//reflection:go_default_library",
    ] + GRPC_COMPILE_DEPS,
    out = "cel_server",
    visibility = ["//visibility:public"],
)
