load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(
    default_visibility = [
        "//checker:__subpackages__",
        "//common:__subpackages__",
        "//interpreter:__subpackages__",
        "//parser:__subpackages__",
      ],
)

go_library(
    name = "go_default_library",
    srcs = [
        "compare.go",
        "expr.go",
        "test_all_types.pb.go",
    ],
    deps = [
      "//common/operators:go_default_library",
      "//io:syntax_proto",
      "@com_github_golang_protobuf//proto:go_default_library",
      "@com_github_golang_protobuf//ptypes/any:go_default_library",
      "@com_github_golang_protobuf//ptypes/duration:go_default_library",
      "@com_github_golang_protobuf//ptypes/struct:go_default_library",
      "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
      "@com_github_golang_protobuf//ptypes/wrappers:go_default_library",
    ],
)

proto_library(
    name = "test_all_types_proto",
    srcs = ["test_all_types.proto"],
    deps = [
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:struct_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
    ],
)

go_proto_library(
    name = "test_all_types_go_proto",
    proto = ":test_all_types_proto",
    importpath = "github.com/google/cel-go/test",
)
