load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = [
        "//cel:__subpackages__",
        "//checker:__subpackages__",
        "//common:__subpackages__",
        "//interpreter:__subpackages__",
        "//parser:__subpackages__",
        "//server:__subpackages__",
    ],
    licenses = ["notice"],  # Apache 2.0
)

go_library(
    name = "go_default_library",
    srcs = [
        "compare.go",
        "expr.go",
    ],
    importpath = "github.com/google/cel-go/test",
    deps = [
        "//common/operators:go_default_library",
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
        "@org_golang_google_protobuf//types/known/structpb:go_default_library",
    ],
)
