load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = [
        "//cel:__subpackages__",
        "//checker:__subpackages__",
        "//common:__subpackages__",
        "//ext:__subpackages__",
        "//interpreter:__subpackages__",
        "//parser:__subpackages__",
        "//server:__subpackages__",
    ],
    licenses = ["notice"],  # Apache 2.0
)

go_library(
    name = "go_default_library",
    srcs = [
        "compare.go",
    ],
    importpath = "github.com/google/cel-go/test",
    deps = [],
)
