package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

genrule(
    name = "gen_test_fds",
    srcs = [
        "team.proto",
        "mutant.proto",
    ],
    outs = [
        "team.fds",
    ],
    cmd = ("$(location @com_google_protobuf//:protoc) " +
           "--descriptor_set_out=$@ $(SRCS)"),
    tools = ["@com_google_protobuf//:protoc"],
)

filegroup(
    name = "prompts",
    srcs = glob(["*.prompt.txt"]),
)

exports_files(
    ["test_fds_with_source_info-transitive-descriptor-set-source-info.proto.bin"],
    visibility = ["//cel:__subpackages__"],
)
