load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "decls.go",
        "scopes.go",
    ],
    deps = [
        "//io:checked_proto",
        "//io:syntax_proto",
    ],
    importpath = "github.com/google/cel-go/checker/decls",
    visibility = ["//visibility:public"],
)
