load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "decls.go",
        "scopes.go",
    ],
    deps = [
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
    ],
    importpath = "github.com/google/cel-go/checker/decls",
    visibility = ["//visibility:public"],
)
