load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "debug.go",
    ],
    importpath = "github.com/google/cel-go/common/debug",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "@com_google_cel_spec//proto/v1:syntax_go_proto",
    ],
)
