load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "debug.go",
    ],
    importpath = "github.com/google/cel-go/common/debug",
    visibility = ["//visibility:public"],
    deps = [
        "//common:go_default_library",
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
    ],
)
