load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

go_library(
    name = "go_default_library",
    srcs = [
        "env.go",
    ],
    importpath = "github.com/google/cel-go/common/env",
    deps = [
        "//common/decls:go_default_library",
        "//common/types:go_default_library",
    ],
)
