load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//interpreter:__subpackages__"])

go_library(
    name = "go_default_library",
    srcs = [
        "standard.go",
    ],
    deps = [
        "//interpreter/types:go_default_library",
        "//interpreter/types/traits:go_default_library",
        "//operators:go_default_library",
        "//overloads:go_default_library",
        "@com_github_golang_protobuf//descriptor:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
        "@com_github_golang_protobuf//ptypes/struct:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ]
)