load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//interpreter:__subpackages__"])

go_library(
    name = "go_default_library",
    srcs = [
        "standard.go",
    ],
    deps = [
        "//common/operators:go_default_library",
        "//common/overloads:go_default_library",
        "//interpreter/types:go_default_library",
        "//interpreter/types/traits:go_default_library",
        "@com_github_golang_protobuf//descriptor:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library",
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
        "@com_github_golang_protobuf//ptypes/struct:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ]
)