load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//interpreter:__subpackages__"])

go_library(
    name = "go_default_library",
    srcs = [
        "functions.go",
        "standard.go",
    ],
    deps = [
        "//common/operators:go_default_library",
        "//common/overloads:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
        "//common/types/traits:go_default_library",
    ]
)
