load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//interpreter:__subpackages__"])

go_library(
    name = "go_default_library",
    srcs = ["testing.go"],
    deps = [
        "//common/operators:go_default_library",
        "//io:syntax_proto",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes/duration:go_default_library",
        "@com_github_golang_protobuf//ptypes/struct:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp:go_default_library",
    ]
)