load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(
    default_visibility = ["//repl:__subpackages__"],
    licenses = ["notice"],  # Apache 2.0
)

go_library(
    name = "go_default_library",
    srcs = glob(["*.go"]),
    data = glob(["*.tokens"]),
    importpath = "github.com/google/cel-go/repl/parser",
    deps = [
        "@com_github_antlr_antlr4_runtime_go_antlr//:go_default_library",
    ],
)