# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//repl:__subpackages__"],
    licenses = ["notice"],  # Apache 2.0
)

go_library(
    name = "go_default_library",
    srcs = glob(["*.go"], exclude=["*_test.go"]),
    data = glob(["*.tokens"]),
    importpath = "github.com/google/cel-go/repl/parser",
    deps = [
        "@com_github_antlr4_go_antlr_v4//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["commands_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_antlr4_go_antlr_v4//:go_default_library",
    ],
)
