load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dynamicType.go",
        "errorType.go",
        "functionType.go",
        "listType.go",
        "mapType.go",
        "messageType.go",
        "nullType.go",
        "primitiveType.go",
        "type.go",
        "typeParameter.go",
        "typeType.go",
        "wellKnownType.go",
        "wrapperType.go",
    ],
    visibility = ["//visibility:public"],
)
