load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@org_pubref_rules_protobuf//go:rules.bzl", "GRPC_COMPILE_DEPS")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],  # Apache 2.0
)

go_binary(
    name = "agent",
    srcs = ["agent.go"],
    deps = [
        "//server:go_default_library",
        "@org_golang_google_grpc//reflection:go_default_library",
        "@org_golang_google_genproto//googleapis/api/expr/v1alpha1:go_default_library",
    ] + GRPC_COMPILE_DEPS,
    out = "agent",
)
