load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(
    licenses = ["notice"],  # Apache 2.0
)

go_library(
    name = "go_default_library",
    srcs = [
        "bench.go",
    ],
    importpath = "github.com/google/cel-go/test/bench",
    deps = [
        "//cel:go_default_library",
        "//ext:go_default_library",
        "//common/types:go_default_library",
        "//common/types/ref:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bench_test.go",
    ],
    embed = [
        ":go_default_library",
    ],
    deps = [
        "//cel:go_default_library",
    ],
)
